# ad-server-sys

./: .gitignore  CLAUDE.md  Makefile  PROGRESS.md  README.md  docker-compose.yml  phases.md  pyproject.toml
.github/workflows/: ci.yml
adserver/adserver/: README.md
adserver/batch_features/: README.md  cli.py  framework.py  materialize.py  offline_store.py  quality.py  reach.py  runner.py
adserver/batch_features/jobs/: _shared.py  ad_ctr.py  ad_impressions.py  audiences.py  campaign_spend.py  user_ctr.py  user_ctr_by_category.py  user_impressions.py  user_rides.py
adserver/batch_features/tests/: test_audiences_job.py  test_materialize.py  test_offline_store.py  test_quality.py  test_reach.py  test_runner.py  test_shared.py
adserver/bidder_stub/: README.md
adserver/common/: README.md  audiences.py  audiences.yaml  registry.py  registry.yaml
adserver/common/tests/: test_audiences.py  test_registry.py
adserver/datagen/: README.md  campaigns.py  cli.py  eda.py  events.py  lifts.py  rides.py  users.py
adserver/datagen/tests/: test_campaigns.py  test_determinism.py  test_eda.py  test_events.py  test_lift_docs.py  test_lift_signal.py  test_rides.py  test_users.py
adserver/feature_service/: README.md
adserver/ops/: README.md
adserver/ranking/: README.md
adserver/stream_features/: README.md
adserver/tests/: test_phase0_acceptance.py  test_phase1_acceptance.py
adserver/ui/: README.md
