[project]
name = "toy-adserver"
version = "0.1.0"
description = "A learning project: a miniature real-time ad serving system"
requires-python = "==3.12.*"
dependencies = [
    "polars>=1.9",
    "pyarrow>=17.0",
    "numpy>=2.0",
    "typer>=0.12",
    "matplotlib>=3.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["adserver"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adserver"]
